--- a/DangerUnlimited/DangerUnlimited.html
+++ b/DangerUnlimited/DangerUnlimited.html
@@ -2,17 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Danger Unlimited</title>
 </head>
 
 <body>
-<h2>Danger Unlimited</h2>
 <img src="DangerUnlimited.jpg"> <br>
 Creator: John Byrne<br>
-Series: 4 issue min-series, 1 collection<br>
-Publisher: 1995 Dark Horse<br>
+4 issues, 1 collection in 1995 by Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DangerUnlimited.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DangerUnlimited1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DangerUnlimited2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DangerUnlimited3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DangerUnlimited4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 In 1960, four heroes fought to save the world. In 2060, who will fight to reclaim it? A freak accident gave four friends strength and abilities that set them apart from normal men, and they used these abilities to fight the tide of evil as Danger Unlimited! Fast forward to the far-flung future, when the never-ending battle is actually nearing its end and the side of justice is losing. Earth has been conquered by an alien race and super-powered humans have been outlawed. The human race needs some help, some heavy-duty firepower, if it's going to turn the tide and take back earth. It needs another Danger Unlimited.
 </p><p>
 How much can the world change in 75 years? Don't ask Cal Carson. He's spent three quarters of a century in stasis, but now memories of his membership in the original Danger Unlimited team are gone. Still, he's pretty sure the alien Xlerii shouldn't be ruling the earth.
