--- a/DaredevilVsVapora/DaredevilVsVapora.html
+++ b/DaredevilVsVapora/DaredevilVsVapora.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Daredevil Vs. Vapora</h2>
-<img src="DaredevilVsVapora.jpg"> <br>
-Illustrator: Mike Harris<br>
-Writer: Mindy Newell<br>
-Series: one-shot<br>
-Publisher: 1993, 1996 Marvel<br>
+<img src="DaredevilVsVapora.jpg"><br>
+Illustrator: Mike Harris, Writer: Mindy Newell<br>
+1 issue in 1993 and 1996 by Marvel
 <p>
 "A Season For Tears" Fire Safety Education giveaway sponsored by Gas Appliance Manufacturers Association &amp; Consumer Product Safety Commission on the dangers of gasoline. 
 </p>
