--- a/Daring/Daring.html
+++ b/Daring/Daring.html
@@ -2,16 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+
 <title>Daring</title>
 </head>
-
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <body>
-<h2>Daring</h2>
 <img src="Daring01.jpg"> <br>
-Series: 12 issues, dropped "Mystery" from title at #9.<br>
-Publisher: 1940 Marvel<br>
+12 issues, dropped "Mystery" from title at #9, 1940 Marvel<br>
 <p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Daring01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daring12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Daring Mystery Comics is an American comic-book series published by Timely Comics, a predecessor of Marvel Comics, during the 1930-1940s period fans and historians call the Golden Age of Comic Books. Primarily a superhero anthology, it ran eight issues from 1940 to 1942, and is notable for work by Carl Burgos, Bill Everett, Alex Schomburg, and the team of Joe Simon &amp; Jack Kirby.
 </p><p>
 Daring Mystery Comics #8 (Jan. 1942) features the first appearance of the Golden Age superhero Citizen V, who decades later appears in flashback in the Marvel series Thunderbolts, where his family and the Citizen V identity play a major part. A small handful of other Daring Mystery superheroes have been revived or have made guest appearances in modern-day titles, such as the World War II-set flashback series The Invaders and the feature "Liberty Legion" in Marvel Premiere.
