--- a/Dazzler/Dazzler.html
+++ b/Dazzler/Dazzler.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dazzler</h2>
 <img src="Dazzler.jpg"> <br>
-Series: 42 issues 1981-1986<br>
-Publisher: Marvel<br>
+42 issues 1981-1986 by Marvel
 <p>
 Dazzler first appeared in Uncanny X-Men #130 (February 1980).
 </p><p>
