--- a/Deadline/Deadline.html
+++ b/Deadline/Deadline.html
@@ -2,19 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Deadline</title>
 </head>
 
 <body>
-<h2>Deadline</h2>
-<img src="Deadline.jpg"> <br>
-Cover: Greg Horn, Bill Rosemann<br>
+<img src="Deadline1.jpg"> <br>
 Writer &amp; Illustrator: Guy Davis<br>
-Series: 4 issue min-series<br>
-Publisher: 2002 Marvel<br>
+4 issues in 2002 by Marvel<br>
 <p>
-What's it really like to be a reporter the Daily Bugle? What's it like to write about Marvel's larger-than-life super humans... especially if you think they're a bunch of immature brats? Rookie reporter Katherine Farrell hates "The Capes". They wear ridiculous costumes. They have petty feuds. They run around destroying public property when real heroes like cops and firemen are sacrificing their lives to help others. But, hey, Kat's a newbie, so it's the beat she's stuck with. That is, unless she can nail a big story and move up to the City Crime Desk next to her hero Ben Urich. Trouble is, her career, not to mention her life, is threatened when she uncovers the identity of a super-villian serial killer.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Deadline1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadline2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadline3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadline4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+What's it really like to be a reporter the Daily Bugle? What's it like to write about Marvel's larger-than-life super humans... especially if you think they're a bunch of immature brats? 
+</p><p>
+Rookie reporter Katherine Farrell hates "The Capes". They wear ridiculous costumes. They have petty feuds. They run around destroying public property when real heroes like cops and firemen are sacrificing their lives to help others. But, hey, Kat's a newbie, so it's the beat she's stuck with. That is, unless she can nail a big story and move up to the City Crime Desk next to her hero Ben Urich. Trouble is, her career, not to mention her life, is threatened when she uncovers the identity of a super-villian serial killer.
 </p>
 
 </body>
