--- a/DeadlyFoesOfSpiderMan/DeadlyFoesOfSpiderMan.html
+++ b/DeadlyFoesOfSpiderMan/DeadlyFoesOfSpiderMan.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Deadly Foes of Spider-Man</h2>
 <img src="DeadlyFoesOfSpiderMan.jpg"> <br>
-Series: 4 issue min-series, 1991<br>
-Publisher: Marvel<br>
+4 issues in 1991 by Marvel
 <p>
 Script by Danny Fingeroth. Pencils Al Milgrom and Kerry Gammill. Inks by Mike Machlan. Cover by Al Milgrom. 
 </p><p>
