--- a/DeadlyHandsOfKungFu/DeadlyHandsOfKungFu.html
+++ b/DeadlyHandsOfKungFu/DeadlyHandsOfKungFu.html
@@ -7,20 +7,17 @@
 </head>
 
 <body>
-<h2>Deadly Hands of Kung Fu</h2>
-<img src="DeadlyHandsOfKungFu.jpg"> 
-<img src="DeadlyHandsOfKungFuSpecial.jpg"> <br>
-Cover: Neal Adams<br>
-Special Cover: Harold Shull<br>
-Series: 33 issues, 1974<br>
-Publisher: Marvel<br>
+<img src="DeadlyHandsOfKungFu.jpg" title="cover by Neal Adams"> 
+<img src="DeadlyHandsOfKungFuSpecial.jpg" title="cover by Harold Shull"> <br>
+33 issues in 1974 by Marvel<br>
 <p>
 Kung Fu Stories:<ul>
 <li> "Shang Chi, the Master of Kung Fu!" Story by Steve Englehart. Art by Jim Starlin and Al Milgrom.</li>
 <li>"Heroes never Die!" An in-depth biography on Bruce Lee by Lorraine Zenka-Smith.</li>
 <li>"What to do Till the Sensei Comes!" A 4-page instructional on the fundamentals of martial arts.</li>
 <li>"Catching a Killer Red Handed!" A movie review of Five Fingers of Death by John David Warner.</li>
-<li>"The Way of the Tiger, the Sign of the Dragon, and the Click of the Neilsens!" An article about the TV show Kung Fu, starring David Caradine, by John David Warner.</li>
+<li>"The Way of the Tiger, the Sign of the Dragon, and the Click of the Neilsens!"</li>
+<li>An article about the TV show Kung Fu, starring David Caradine, by John David Warner.</li>
 <li>"Hai, Karate/Kung Fu Fan." An editorial by Roy Thomas.</li>
 <li>"Fu on You." An editorial by Marv Wolfman.</li>
 <li>"Sons of the Tiger" Story by Gerry Conway. Art by Dick Giordano.</li>
