--- a/kb.html
+++ b/kb.html
@@ -2986,9 +2986,16 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Catwoman</td>
+<td>1972</td>
+<td>DC</td>
+<td><a href="CatWoman/CatWoman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cat-Man</td>
 <td>1941</td>
-<td>Temerson / Helnit / Continental</td>
+<td>Temerson</td>
 <td><a href="CatMan/CatMan.html">Details</a></td>
 </tr>
 
