--- a/DeadOfNight/DeadOfNight.html
+++ b/DeadOfNight/DeadOfNight.html
@@ -2,17 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dead of Night</title>
 </head>
 
 <body>
-<h2>Dead of Night</h2>
-<img src="DeadOfNight.jpg"> <br>
-Cover: John Romita<br>
-Series: 11 issues, 1973<br>
-Publisher: Marvel<br>
+<img src="DeadOfNight01.jpg" title="cover by John Romita"> <br>
+11 issues in 1973 by Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadOfNight11.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 A collection of horror stories.<ul>
 <li>"The Ghost Still Walks", art by Joe Sinnott; A fraternity initiation leads to a death.</li>
 <li>"House of Fear!" art by Jim Mooney; A haunted house investigator and a reporter visit an old mansion.</li>
