--- a/Deadenders/Deadenders.html
+++ b/Deadenders/Deadenders.html
@@ -2,22 +2,48 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>tab</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Dead Enders</title>
 </head>
 
 <body>
-<h2>Deadenders</h2>
-<img src="Deadenders.jpg"> <br>
-Cover: Philip Bond<br>
-Series: 16 issues, 2000<br>
-Publisher: Vertigo (DC)<br>
+<img src="Deadenders01.jpg" title="cover by Philip Bond"> <br>
+16 issues in 2000-2001 by Vertigo (DC)
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Deadenders01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadenders10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Written by Ed Brubaker; Illustrated by Warren Pleece, Richard Case. 
 </p><p>
-Their whole world is on life-support and they're about to self-destruct. They're an angst-ridden gang of teenagers living in a nuclear wasteland where one deserted neighborhood is worse than the next. This is the world of the DEADENDERS, a new ongoing series from VERTIGO. Loaded with attitude, Bartholemew Beezenback  (a.k.a. Beezer) is Sector 5's gang leader: a cocky teenager who spends most of his time cranked up on "amp," riding his scooter and dodging his large family as well as the corrupt CityCorps cops. He spends his time dealing drugs, igniting street riots, repossessing cars and arguing with his girlfriend, but his once-exciting, edgy life is about to go from accelerated to overload. Because not only has Beezer been harboring a nasty secret (strange "visions" of a world with blue skies and sunlight) that's about to burst into the open, but, as the series unfolds, he's going to discover an unbelievable truth about himself that could propel him from life as a hyped-out delinquent to that of a reluctant hero. Beezer could be his world's savior...that is, if his world lasts long enough.
+Their whole world is on life-support and they're about to self-destruct. They're an angst-ridden gang of teenagers living in a nuclear wasteland where one deserted neighborhood is worse than the next. This is the world of the DEADENDERS, a series from VERTIGO. Loaded with attitude, Bartholemew Beezenback  (a.k.a. Beezer) is Sector 5's gang leader: a cocky teenager who spends most of his time cranked up on "amp," riding his scooter and dodging his large family as well as the corrupt CityCorps cops. 
 </p><p>
-Blade Runner meets Quadrophenia in a dank, futuristic landscape that has been dramatically altered since an earth-shaking event no one seems to remember. While doomsterism and environmental diseases plague most of its denizens, those wealthy enough to live in the "rich" sectors revel in what passes for utopia, a place where enormous weather machines occasionally spew artificial sunlight and books are as rare as royalty. Co-creator/writer Ed Brubaker (SCENE OF THE CRIME) joins co-creator/penciller Warren Pleece (TRUE FAITH), inker Richard Case (DOOM PATROL), and cover artist Philip Bond (KILL YOUR BOYFRIEND) for a post-apocalyptic adventure that's rendered in a riveting color palette by Eisner Award winner Bjarne Hansen (SUPERMAN FOR ALL SEASONS)
+Beezer spends his time dealing drugs, igniting street riots, repossessing cars and arguing with his girlfriend, but his once-exciting, edgy life is about to go from accelerated to overload. Because not only has Beezer been harboring a nasty secret (strange "visions" of a world with blue skies and sunlight) that's about to burst into the open, but, as the series unfolds, he's going to discover an unbelievable truth about himself that could propel him from life as a hyped-out delinquent to that of a reluctant hero. Beezer could be his world's savior...that is, if his world lasts long enough.
+</p><p>
+Blade Runner meets Quadrophenia in a dank, futuristic landscape that has been dramatically altered since an earth-shaking event no one seems to remember. While doomsterism and environmental diseases plague most of its denizens, those wealthy enough to live in the "rich" sectors revel in what passes for utopia, a place where enormous weather machines occasionally spew artificial sunlight and books are as rare as royalty. 
+</p><p>
+Co-creator/writer Ed Brubaker (SCENE OF THE CRIME) joins co-creator/penciller Warren Pleece (TRUE FAITH), inker Richard Case (DOOM PATROL), and cover artist Philip Bond (KILL YOUR BOYFRIEND) for a post-apocalyptic adventure that's rendered in a riveting color palette by Eisner Award winner Bjarne Hansen (SUPERMAN FOR ALL SEASONS)
 </p>
 
 </body>
