--- a/CreaturesOnTheLoose/CreaturesOnTheLoose.html
+++ b/CreaturesOnTheLoose/CreaturesOnTheLoose.html
@@ -2,14 +2,56 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Creatures On The Loose</title>
 </head>
 
 <body>
-<img src="CreaturesOnTheLoose.jpg"> <br>
+<img src="CreaturesOnTheLoose01.jpg"> <br>
 28 issues (#10-37) in 1971 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CreaturesOnTheLoose28.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Numbering continues from Tower of Shadows #9 (Marvel 1969).<br>
 Series formerly "Tower of Shadows." Written by Roy Thomas. Art by by Berni Wrightson (adapted from the Robert E. Howard story). Cover by Marie Severin. New story: first full comic book appearance of King Kull in "The Skull of Silence; Kull's arrogance leads to the release of an ancient menace that he barely is able to defeat. Art by Jack Kirby and Dick Ayers. Reprint"Trull the Unhuman!"; The mental essence of an alien bent on global conquest takes over a steam shovel and is defeated by an elephant. 
 </p>
