--- a/ComixInternational/ComixInternational.html
+++ b/ComixInternational/ComixInternational.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="CI01.jpg"><br>
-#1 - 5, 1975 by Warren<br>
+5 issues in 1975 by Warren<br>
 Story and Art by Richard Corben
 <p>
 <div class="row"><div class="column">
