--- a/MrPunch/MrPunch.html
+++ b/MrPunch/MrPunch.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Comical Tragedy of Mr. Punch</h2>
 <img src="MrPunch01.jpg"> <br>
-Illustrator: Dave McKean<br>
-Writer: Neil Gaiman<br>
-Series: Graphic Novel<br>
-Publisher: 1994 Vertigo (DC)<br>
+Illustrator: Dave McKean, Writer: Neil Gaiman<br>
+1 issue in 1994 by Vertigo (DC)<br>
 <p>
 The book follows the childhood memories of the narrator, illustrating various experiences in his life: fishing on the beach at dawn; his grandparents and how one grandfather went mad; a hunchback great-uncle; the betrayal of children by adults; fear of the unknown; an unwanted pregnancy, violence, possibly even murder.
 </p><p>
