--- a/kb.html
+++ b/kb.html
@@ -3371,6 +3371,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Comix International</td>
+<td>1975</td>
+<td>Warren</td>
+<td><a href="ComixInternational/ComixInternational.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Commando Adventures</td>
 <td>1957</td>
 <td>Atlas</td>
