--- a/Coneheads/Coneheads.html
+++ b/Coneheads/Coneheads.html
@@ -2,17 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Coneheads</title>
 </head>
 
 <body>
 <img src="ConeheadsMovie.jpg"><br>
-Paramount Pictures 1993
+Paramount Pictures 1993<br>
+4 issues in 1994 by Marvel
 <p>
-<img src="Coneheads1.jpg"> <br>
-Comic series: 4 issue mini series<br>
-Marvel 1994<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ConeheadsMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coneheads1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coneheads2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coneheads3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coneheads4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p>
+
 
 </body>
 </html>
