--- a/Coyote/Coyote.html
+++ b/Coyote/Coyote.html
@@ -2,15 +2,46 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Coyote</title>
 </head>
 
 <body>
 <img src="Coyote.jpg"> <br>
-Writer: 	Steve Englehart, Illustrator: Marshall Rogers <br>
+Writer: Steve Englehart, Illustrator: Marshall Rogers <br>
 1981 Eclipse, 1983 Epic (Marvel)<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Coyote.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Coyote16.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 The characters first appeared in Eclipse Magazine #2-8. It would later be reprinted in a color trade paperback, I Am Coyote.
 Afterwards, a new comic book series started at Marvel Comics Epic Comics line, that ran 16 issues. It was notable for the first published work of Todd McFarlane. According to Epic editor-in-chief Archie Goodwin, artist Steve Leialoha's departure after issue #2 caused deadline problems that the series never fully recovered from, leading to its early cancellation.
 </p>
