--- a/Daring/Daring.html
+++ b/Daring/Daring.html
@@ -2,26 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<<<<<<< HEAD
-
-=======
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
->>>>>>> 9d09d8414b1fd11bb116e7fa4eb8bc0dd2847d1d
 <title>Daring</title>
 </head>
-<link rel="stylesheet" href="../slideshow.css">
-<script src="../slideshow.js"></script>
+
 <body>
 <img src="Daring01.jpg"> <br>
-<<<<<<< HEAD
-12 issues, dropped "Mystery" from title at #9, 1940 Marvel<br>
+12 issues in 1940 by Marvel
 <p>
 
-=======
-12 issues in 1940 by Marvel<br>
-<p>
->>>>>>> 9d09d8414b1fd11bb116e7fa4eb8bc0dd2847d1d
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -46,12 +36,9 @@
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-<<<<<<< HEAD
 
-=======
 </p><p>
 The series dropped "Mystery" from the title at #9.
->>>>>>> 9d09d8414b1fd11bb116e7fa4eb8bc0dd2847d1d
 </p><p>
 Daring Mystery Comics is an American comic-book series published by Timely Comics, a predecessor of Marvel Comics, during the 1930-1940s period fans and historians call the Golden Age of Comic Books. Primarily a superhero anthology, it ran eight issues from 1940 to 1942, and is notable for work by Carl Burgos, Bill Everett, Alex Schomburg, and the team of Joe Simon &amp; Jack Kirby.
 </p><p>
