--- a/DarkHorseBookOfTheDead/DarkHorseBookOfTheDead.html
+++ b/DarkHorseBookOfTheDead/DarkHorseBookOfTheDead.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dark Horse Book of the Dead</h2>
 <img src="DarkHorseBookOfTheDead.jpg"> <br>
-Series: one-shot Graphic Novel<br>
-Publisher: 2005 Dark Horse<br>
+1 issue in 2005 by Dark Horse
 <p>
 By Mike Mignola, Evan Dorkin, Jill Thompson, Kelley Jones, Gary Gianni, Robert E. Howard, Todd Herman, David Crouse, Roger Lanridge, Eric Powell, Bob Fingerman, Pat McEown, Guy Davis, Jamie S. Rich, Paul Lee, Brian Horton, and Scott Allie. Cover by Gary Gianni. 
 </p><p>
