--- a/DarkHorseComics/DarkHorseComics.html
+++ b/DarkHorseComics/DarkHorseComics.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Dark Horse Comics</h2>
-<img src="DarkHorseComics.jpg"> <br>
-Cover: Dave Dorman<br>
-Series: on-going, 25 issues<br>
-Publisher: 1992 Dark Horse<br>
+<img src="DarkHorseComics.jpg" title="cover by Dave Dorman"> <br>
+25 issues in 1992 by Dark Horse
 <p>
-This monthly, color anthology will feature some of the hottest properties and creators in the known universe. Some of the story lines presented in the pages of Dark Horse Comics will spin off into their own monthly series. The first issue features a Predator story by Ian Edginton and Rick Leonardi, a RoboCop tale by John Arcudi (Aliens: Genocide) and John Paul Leon that marks the beginning of a major new series, "Renegade" by Chris Claremont (X-Men) and Vince Giarrano, which will introduce characters and situations that will be used in Claremont's upcoming Aliens vs. Predator series, and "Time Cop" by Mark Verheiden (Predator: Race War), Wayne Losey, and Chris Warner (Aliens vs. Predator). Plus, a special double-gatefold cover featuring all the characters painted by none other than Dave Dorman.
+A monthly anthology featuring some of the hottest properties and creators in the known universe. Some of the story lines presented in the pages of Dark Horse Comics will spin off into their own monthly series. The first issue features a Predator story by Ian Edginton and Rick Leonardi, a RoboCop tale by John Arcudi (Aliens: Genocide) and John Paul Leon that marks the beginning of a major new series, "Renegade" by Chris Claremont (X-Men) and Vince Giarrano, which will introduce characters and situations that will be used in Claremont's upcoming Aliens vs. Predator series, and "Time Cop" by Mark Verheiden (Predator: Race War), Wayne Losey, and Chris Warner (Aliens vs. Predator). Plus, a special double-gatefold cover featuring all the characters painted by none other than Dave Dorman.
 </p>
 
 </body>
