--- a/DarkHorsePresents/DarkHorsePresents.html
+++ b/DarkHorsePresents/DarkHorsePresents.html
@@ -2,19 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dark Horse Presents</title>
 </head>
 
 <body>
-<h2>Dark Horse Presents</h2>
-<img src="DarkHorsePresents.jpg"> 
-<img src="DarkHorsePresents2011.jpg"> 
-<img src="DarkHorsePresents2014.jpg"> 
-<br>
-Series in 3 sets: 1986-2000 (#1-157), 2011-2014 (#1-36), 2014-2018 (#1-35)<br>
-Publisher: Dark Horse<br>
+<img src="DarkHorsePresents.jpg"><br>
+157 issues from 1986-2000, 36 issues from 2011-2014, 35 issues 2014-2018 by Dark Horse
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DarkHorsePresents.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkHorsePresents2011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkHorsePresents2014.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 An anthology of original stories.
 </p><p>
 1986 issue #1:<br>
