--- a/DarkKnightATrueBatmanStory/DarkKnightATrueBatmanStory.html
+++ b/DarkKnightATrueBatmanStory/DarkKnightATrueBatmanStory.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dark Knight: A True Batman Story</h2>
 <img src="DarkKNightATrueBatmanStory.jpg"> <br>
-Series: Graphic Novel<br>
-Publisher: 2017 Vertigo<br>
+1 issue in 2017 by Vertigo
 <p>
 The Caped Crusader has been an icon of justice and authority for generations. But in this surprising original graphic novel, now in trade paperback for the first time, we see Batman in a new light-as the savior who helps a discouraged man recover from a brutal attack that left him unable to face the world. 
 </p><p>
