--- a/DarkRain/DarkRain.html
+++ b/DarkRain/DarkRain.html
@@ -7,13 +7,11 @@
 </head>
 
 <body>
-<h2>Dark Rain: A New Orleans Story</h2>
-<img src="DarkRain.jpg"> <br>
-Cover: Nessim Higson<br>
+Dark Rain: A New Orleans Story<br>
+<img src="DarkRain.jpg" title="cover by Nessin Higson"><br>
 Writer: Mat Johnson<br>
 Illustrator: Simon Gane<br>
-Series: Graphic Novel<br>
-Publisher: 2010 Vertigo (DC)<br>
+1 issue in 2010 by Vertigo (DC)
 <p>
 From Mat Johnson, writer of the acclaimed INCOGNEGRO, comes a graphic novel thriller set in the days after Hurricane Katrina. Two small-time ex-cons with big dreams get the idea that this would be the perfect time to rob a bank. Catch is, the bank is in New Orleans, and they're on parole in Houston. Now, as every sane person tries to get out of The Big Easy, Emmit and Dabny will do whatever it takes to get in. 
 </p><p>
