--- a/DarkReign/DarkReign.html
+++ b/DarkReign/DarkReign.html
@@ -9,8 +9,7 @@
 <body>
 <h2>Dark Reign</h2>
 <img src="SecretInvasionDarkReign.jpg"> <br>
-Series: series of one-shots, 1 collection<br>
-Publisher: 2009 Marvel<br>
+1 collection in 2009 by Marvel<br>
 <p>
 Following the Skrull invasion of Earth during "Secret Invasion", Norman Osborn leveraged his success in defeating the Skrulls to replace Tony Stark as director of S.H.I.E.L.D. Deadpool played a large part in this, as he was supposed to send the information on how to kill the Skrull Queen Veranke to Nick Fury. An error occurred during the process and the information went to Osborn, suggesting subterfuge on Osborn's part. Osborn shot Veranke in the head and became the director of S.H.I.E.L.D., which he replaced with H.A.M.M.E.R. Osborn simultaneously formed an alliance called the Cabal with Doctor Doom, Emma Frost, Namor, Loki, and the Hood. He used H.A.M.M.E.R. to carry out his own agenda and, at times, the Cabal's. However, Osborn's actions and his reputation influenced a number of heroes and villains to attempt to resist Osborn's rule and remove him from power by force, if necessary.
 
