--- a/Death3/Death3.html
+++ b/Death3/Death3.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Death3</h2>
 <img src="Death3.jpg"> <br>
-Series: 4 issue mini series<br>
-Publisher: 1993 Marvel<br>
+4 issues in 1993 by Marvel
 <p>
 Embossed Cover. From the Marvel UK line comes Death 3. "Prometheus Unhinged!" Part 1 of 4. Story by Dan Abnett. Art by Dell Barras. Welcome to Los Angeles 2021 AD. Former AIM (Advanced Idea Mechanics) member and head developer of the Minion Project (see Death's Head &amp; Death's Head II (1992/03-06) #1-4), Doctor Evelyn Necker has just created the ultimate weapon, the rogue cyborg known as Death Metal. The only problem is Necker's creation has a mind of its own. 
 </p>
