--- a/DeathAtDeathsDoor/DeathAtDeathsDoor.html
+++ b/DeathAtDeathsDoor/DeathAtDeathsDoor.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h2>Death At Death's Door</h2>
 <img src="DeathAtDeathsDoor.jpg"> <br>
 Creator: Jill Thompson<br>
-Series: Graphic Novel<br>
-Publisher: Vertigo (DC) <br>
+1 issue by Vertigo (DC)
 <p>
 Featuring appearances by Sandman and all his siblings. In an original story that parallels the events of SANDMAN: SEASON OF MIST, the minions of Hell end up in Death's apartment. Sisters Delirium and Despair decide to throw a party for the dead - which quickly gets out of control. It's up to Dream's older sister, Death, to figure out how to save the day and the afterlife...not to mention the carpet. 
 </p>
