--- a/DeathMetal/DeathMetal.html
+++ b/DeathMetal/DeathMetal.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Death Metal</h2>
 <img src="DeathMetal.jpg"> <br>
-Series: 4 issue mini-series<br>
-Publisher: Marvel<br>
+4 issues in 1994 by Marvel<br>
 <p>
 Death Metal premieres with a metallic ink cover. First there was Death's Head II, then came Death Metal, the deadliest cyborg of them all. Written by Simon Furman. Art and cover by John Royle and Robin Riggs. 
 </p>
