--- a/DeathMetalVsGenetix/DeathMetalVsGenetix.html
+++ b/DeathMetalVsGenetix/DeathMetalVsGenetix.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Death Metal Vs. Genetix</h2>
 <img src="DeathMetalVsGenetix.jpg"> <br>
-Series: 2 issue mini series, 1993<br>
-Publisher: Marvel<br>
+2 issues in 1993 by Marvel
 <p>
 The premiere of this 2-issue limited series is polybagged to include 2 trading cards. Death Metal sets about committing suicide by creating a Genetic assassin to kill him! He begins obtaining tissue samples from other super-powered individuals to create his own killer, but Genetix has something to say about it. Written by Simon Furman. Art by Paco Diaz and Robin Smith. 
 </p><p>
