--- a/DeathWreck/DeathWreck.html
+++ b/DeathWreck/DeathWreck.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Death Wreck</h2>
-<img src="DeathWreck.jpg"> <br>
+<img src="DeathWreck.jpg"><br>
 Writer: Craig Houston<br>
 Illustrators: Stewart "Staz" Johnson, Robin Riggs<br>
-Series: 4 issue mini-series<br>
-Publisher: 1994 Marvel<br>
+4 issues in 1994 by Marvel
 <p>
 Death Wreck premieres with a metallic ink cover. Before there was Death's Head II, there was Death Wreck, the half-cyborg, quarter man with a drinking problem, and quarter car Dr. Evelyn Necker used for a Death's Head II prototype. When the villainous Burgen attempts to kidnap Death's Head II, he accidentally ends up with Death Wreck.  
 </p><p>
