--- a/DeathsHead/DeathsHead.html
+++ b/DeathsHead/DeathsHead.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Death's Head</h2>
 <img src="DeathsHead.jpg"> <br>
 Writer: Simon Furman <br>
 Illustrator: Geoff Senior<br>
-Series: a few mini series<br>
-Publisher: 1988 Marvel UK<br>
+1988 Marvel UK
 <p>
 Death's Head is a fictional character appearing in British comics and American comic books published by Marvel Comics. The character is depicted as a robotic bounty hunter (or rather, as he calls himself, a "freelance peace-keeping agent"). The character was created by writer Simon Furman and artist Geoff Senior for the company's Marvel UK imprint (Transformers UK #113). 
 </p><p>
