--- a/Defenders/Defenders.html
+++ b/Defenders/Defenders.html
@@ -2,16 +2,50 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Defenders</title>
 </head>
 
 <body>
-<h2>Defenders</h2>
 <img src="Defenders.jpg"> <br>
-Publisher: Marvel<br>
-Series: 1972 (#1-152), 2001 (#1-12), 2005 (#1-5), 2011 (#1-12), 2017 (#1-10).<br>
+152 issues in 2001, 12 issues in 2005, 5 issues 2011, 12 issues in 2017, 10 issues in 1972 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Defenders.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Defenders020.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 The Defenders is a set of fictional superhero groups with rotating membership appearing in American comic books published by Marvel Comics. They are usually presented as a "non-team" of individualistic "outsiders" who, in their prior adventures, are known for following their own agendas. The team often battles mystic and supernatural threats.
 </p><p>
 Its original incarnation was led by Doctor Strange and included Hulk, Namor, and eventually Silver Surfer. They first appeared as the Defenders in Marvel Feature #1 (Dec. 1971).
@@ -20,28 +54,6 @@ The group had a rotating line-up from 1972 until 1986, with Dr. Strange and the 
 </p><p>
 The concept was modified in the 1993–95 series Secret Defenders, in which Dr. Strange assembled different teams for each individual mission. The original team was reunited in a short-lived 2001 series by Kurt Busiek and Erik Larsen. In 2005 Marvel published a five-issue miniseries featuring the classic line-up by J.M. DeMatteis, Keith Giffen and Kevin Maguire. In December 2011 writer Matt Fraction and artist Terry Dodson launched a Defenders series with a mixture of classic and new members, which lasted for 12 issues.
 </p>
-Issues:<ul>
-<li><a href="Defenders001.html">Defenders #1</li>
-<li><a href="Defenders002.html">Defenders #2</li>
-<li><a href="Defenders003.html">Defenders #3</li>
-<li><a href="Defenders004.html">Defenders #4</li>
-<li><a href="Defenders005.html">Defenders #5</li>
-<li><a href="Defenders006.html">Defenders #6</li>
-<li><a href="Defenders007.html">Defenders #7</li>
-<li><a href="Defenders008.html">Defenders #8</li>
-<li><a href="Defenders009.html">Defenders #9</li>
-<li><a href="Defenders010.html">Defenders #10</li>
-<li><a href="Defenders011.html">Defenders #11</li>
-<li><a href="Defenders012.html">Defenders #12</li>
-<li><a href="Defenders013.html">Defenders #13</li>
-<li><a href="Defenders014.html">Defenders #14</li>
-<li><a href="Defenders015.html">Defenders #15</li>
-<li><a href="Defenders016.html">Defenders #16</li>
-<li><a href="Defenders017.html">Defenders #17</li>
-<li><a href="Defenders018.html">Defenders #18</li>
-<li><a href="Defenders019.html">Defenders #19</li>
-<li><a href="Defenders020.html">Defenders #20</li>
-</ul>
 
 </body>
 </html>
