--- a/DefendersOfTheEarth/DefendersOfTheEarth.html
+++ b/DefendersOfTheEarth/DefendersOfTheEarth.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Defenders Of The Earth</h2>
 <img src="DefendersOfTheEarth.jpg"> <br>
-Series: 4 issue mini-series<br>
-Publisher: 1987 Marvel<br>
+4 issues in 1987 by Marvel
 <p>
 Issue #1 "Defenders of the Earth!" Story by Stan Lee and Bob Harras. Art by Alex Saviuk and Fred Fredericks. Sci-fi legend Flash Gordon must team-up with the Phantom, Mandrake the Magician, and the super strong Lothar to defend planet Earth against the dark forces of Ming the Merciless. Luckily, they'll get some help from the next generation of heroes, their children. 
 </p>
