--- a/DeadpoolAndTheMercsForMoney/DeadpoolAndTheMercsForMoney.html
+++ b/DeadpoolAndTheMercsForMoney/DeadpoolAndTheMercsForMoney.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h2>Deadpool and the Mercs for Money</h2>
 <img src="DeadpoolAndTheMercsForMoney.jpg"> 
 <img src="DeadpoolAndTheMercsForMoneySeries2.jpg"> <br>
-Series: 5 issue first series in 2016, 10 issues second series in 2016 and into 2017.<br>
-Publisher: Marvel<br>
+5 issues in 2016, 10 issues in 2016-2017 by Marvel
 <p>
 First series, issue #1: Written by Cullen Bunn. Art by Salva Espin. Cover by Declan Shalvey. Deadpool might be an Avenger now, but he's also got his own private team of mercenaries...the legally-cleared-to-be-called MERCS FOR MONEY! Got a problem you can't solve on your own and a pile of money you'd like to be rid of? Just call Deadpool, Stingray, Massacre, Solo, Foolkiller, Terror and Slapstick and watch as that problem is shot, stabbed, eviscerated, pulverized and generally made bloody!
 </p><p>
