--- a/Deathlok/Deathlok.html
+++ b/Deathlok/Deathlok.html
@@ -7,16 +7,12 @@
 </head>
 
 <body>
-<h2>Deathlok</h2>
 <img src="Deathlok.jpg"> <br>
-Series: on-going, 1991 series = 34 issues<br>
-Publisher: 1991 Marvel<br>
+34 issues in 1991 by Marvel
 <p>
 Deathlok (also referred to as "Deathlok the Demolisher") is a fictional character appearing in American comic books published by Marvel Comics. He first appeared in <a href="../AstonishingTales/AstonishingTales.html">Astonishing Tales #25</a> (Aug. 1974), created by Rich Buckler and Doug Moench. At least three subsequent Marvel characters have used the "Deathlok" identity since then. A recurring theme among these characters is that a dead human has been reanimated with cybernetic technology. "Deathlok technology" has also been used thematically by Marvel writers in other stories. The character has also appeared on television in animation and live action.
 </p><p>
 1991 #1 Cover art by Denys Cowan. The Wolf Is At The Door, script by Dwayne McDuffie and Gregory Wright, pencils by Denys Cowan, inks by Mike Manley; Deathlok stops Harlan Ryker's warwolf from killing others who would testify against Ryker.
-</p><p>
-
 </p>
 
 </body>
