--- a/DefendersOfDynatronCity/DefendersOfDynatronCity.html
+++ b/DefendersOfDynatronCity/DefendersOfDynatronCity.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>DefendersOfDynatronCity</h2>
 <img src="DefendersOfDynatronCity.jpg"> <br>
-Series: 6 issue mini-series<br>
-Publisher: 1992 Marvel<br>
+6 issues in 1992 by Marvel<br>
 <p>
 Defenders of Dynatron City is a video game released for the Nintendo Entertainment System by JVC and Lucasfilm Games (later, LucasArts) in August 1992. The designer of the game was Gary Winnick. This was Winnick's first project as sole designer. He was previously the co-designer of Maniac Mansion, alongside Ron Gilbert.
 </p><p>
