--- a/Dazzler/Dazzler.html
+++ b/Dazzler/Dazzler.html
@@ -2,14 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dazzler</title>
 </head>
 
 <body>
-<img src="Dazzler.jpg"> <br>
+<img src="Dazzler01.jpg"> <br>
 42 issues 1981-1986 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Dazzler01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dazzler10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Dazzler first appeared in Uncanny X-Men #130 (February 1980).
 </p><p>
 A mutant with the ability to convert sound vibrations into light and energy beams, Dazzler was originally developed as a cross-promotional, multi-media creation between Casablanca Records and Marvel Comics until the tie-ins were dropped in 1980. The character was created by a committee of Marvel staff, principally writer/editor Tom DeFalco and illustrator John Romita, Jr.
