--- a/DeadpoolSecretSecretWars/DeadpoolSecretSecretWars.html
+++ b/DeadpoolSecretSecretWars/DeadpoolSecretSecretWars.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Deadpool's Secret Secret Wars</h2>
 <img src="DeadpoolSecretSecretWars.jpg"> <br>
-Series: 4 issue mini-series, 2015<br>
-Publisher: Marvel<br>
+4 issues in 2015 by Marvel
 <p>
 Secret Wars: Warzones - Written by Cullen Bunn. Art by Matteo Lolli. Cover by Tony Harris. NOT A SECRET WARS TIE-IN! Well...it is...but not THAT Secret Wars. Remember the original Secret Wars from 1984? And remember how Deadpool played a huge important role in it? Wait...you DON'T? Then you need to read this series immediately and be educated! From the team that brought you DEADPOOL KILLUSTRATED comes the most Secretest War of all! Plus: a bonus Deadpool Contest of Champions tale! 
 </p>
